# appstoreconnect-cli

./: Cargo.toml  README.md
src/: auth.rs  cli.rs  client.rs  config.rs  error.rs  main.rs  project.rs
src/commands/: age_rating_declarations.rs  analytics_reports.rs  app_info_localizations.rs  apps.rs  beta_app_review_submissions.rs  beta_groups.rs  beta_testers.rs  builds.rs  bundle_id_capabilities.rs  bundle_ids.rs  certificates.rs  config_cmd.rs  customer_reviews.rs  devices.rs  encryption_declarations.rs  in_app_purchases.rs  init_cmd.rs  mod.rs  perf_metrics.rs  phased_releases.rs  profiles.rs  release_requests.rs  review_details.rs  review_submissions.rs  sales_reports.rs  sandbox_testers.rs  subscription_groups.rs  subscription_localizations.rs  subscriptions.rs  territories.rs  user_invitations.rs  users.rs  version_localizations.rs  versions.rs
src/types/: age_rating.rs  analytics_report.rs  app.rs  app_info_localization.rs  app_store_version.rs  beta_app_review_submission.rs  beta_group.rs  beta_tester.rs  build.rs  bundle_id.rs  bundle_id_capability.rs  certificate.rs  common.rs  customer_review.rs  device.rs  encryption_declaration.rs  in_app_purchase.rs  mod.rs  perf_metric.rs  phased_release.rs  profile.rs  release_request.rs  review_detail.rs  review_submission.rs  sales_report.rs  sandbox_tester.rs  subscription.rs  territory.rs  user.rs  user_invitation.rs  version_localization.rs
